<resources>
    <string name="app_name">Envelope</string>

    <!--    Main Page-->
    <string name="bottom_nav_history">История</string>
    <string name="bottom_nav_budget">Мой бюджет</string>
    <string name="bottom_nav_profile">Профиль</string>

    <!--    On Boarding-->
    <string name="on_boarding_skip">Пропустить</string>
    <string name="on_boarding_next">Далее</string>
    <string name="on_boarding_start">Начать</string>

    <string name="back">Назад</string>
    <string name="return_to_start">Вернуться в начало</string>

    <!--    Start Page-->
    <string name="set_amount">Укажите сумму, которую хотите распределить</string>
    <string name="set_card_info">Укажите данные вашей карты</string>
    <string name="all_steps_completed">Все этапы пройдены!</string>
    <string name="attention">Внимание!</string>
    <string name="finish_set_up_caution">С вашей карты снимутся %s ₸</string>
    <string name="start_progress_first_step">Сумма</string>
    <string name="start_progress_second_step">Распределение</string>
    <string name="start_progress_third_step">Карта</string>


    <!--    Distribution Page-->
    <string name="obligatory_expenses">Обязательные расходы</string>
    <string name="savings">Сбережения</string>
    <string name="unforeseen_expenses">Непредвиденные расходы</string>
    <string name="obligatory_expenses_description">Добавьте ваши обязательные расходы на месяц</string>
    <string name="savings_description">Сколько процентов вы хотите сберегать?</string>
    <string name="unforeseen">Сколько процентов оставите на непредвиденные расходы?</string>
    <string name="add">Добавить</string>
    <string name="total_price">%s ₸</string>
    <string name="search">Поиск</string>
    <string name="add_service_header">Добавление платежа</string>
    <string name="add_service_title">Название</string>
    <string name="add_service_total_sum">Сумма</string>
    <string name="add_service_date">Дата</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="total_sum_title">Общая сумма:</string>

    <!--Card Page-->
    <string name="fill_empty_fields">Заполните все поля</string>
    <string name="card_number">Номер карты</string>
    <string name="owner_name">Имя владельца</string>
    <string name="cvv">CVV</string>
    <string name="expire_date_hint">ММ/ГГ</string>

    <!--    Profile Page-->
    <string name="change_profile">Изменить</string>
    <string name="my_cards">Мои карты</string>
    <string name="name_surname">%1$s %2$s</string>
    <string name="user_age">%d лет</string>

    <!--Home Page-->
    <string name="pay">Оплатить</string>
    <string name="budget">Загружено</string>
    <string name="expenses">Обязательные расходы</string>
    <string name="all_payments">Все платежи</string>
    <string name="envelops">Бюджет на месяц</string>
    <string name="unexpected_expense">Непредвиденные расходы</string>
    <string name="withdraw_sum">Введите сумму для изъятия</string>
    <string name="savings_title">Сбережения</string>
    <string name="create_deposit">Открыть депозит</string>
    <string name="deposit_fragment_title">Доступные депозиты</string>
    <string name="payment_detail_fragment_title">Оплачивание платежа</string>

    <!--    Transaction History-->
    <string name="transaction_history">История транзакций</string>

    <string name="phone_number">Номер телефона</string>
    <string name="sum">Сумма</string>

    <string name="service_payment">Оплатить %s₸</string>
    <string name="withdraw">Изъять</string>
    <string name="total_sum">Общая сумма</string>
    <string name="withdraw_early">Снять досрочно</string>

    <string name="sent_date">Отправим через %s %s</string>
    <string name="week_number">%s неделя</string>
    <string name="condition">Я принимаю условия пользовательского соглашения и согласен на обработку персональных данных</string>
    <string name="incorrect_card_number">Неверный номер карты</string>
    <string name="required_field">Обязательное поле</string>
    <string name="incorrect_date">Некорректная дата</string>
    <string name="incorrect_cvv_code">Неверный CVV-код</string>

    <string name="incorrect_phone_number">Некорректный номер телефона</string>
    <string name="incorrect_sum">Ошибка</string>
    <string name="budget_hint">Ваши распределенные деньги на каждую неделю. Постарайтесь не тратить больше лимитированной суммы и не снимать досрочно деньги.</string>
    <string name="unexpected_hint">Деньги предназначенные для непредвиденных ситуаций, такие как дни рождения, больницы, штрафы, вызов сантехника и прочее. Вы можете их снять в любое время.</string>
    <string name="savings_hint">Вы можете открыть депозитный счет, выбрав подходящую для вас процентную ставку и откладывать свои сбережения эффективно.</string>
    <string name="dateRange">%s - %s</string>
    <string name="progress">%s %</string>
    <string name="sum_with_t">%s ₸</string>
    <string name="tenge">₸</string>
    <string name="hint">"?"</string>

</resources>