<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="32dp"
    android:background="@color/main_page_background_dark"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/nunito_semibold_600"
        android:text="@string/add_service_header"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textSize="16sp" />

    <include
        android:id="@+id/item"
        layout="@layout/item_expenses_list" />

    <EditText
        android:id="@+id/et_card_number"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_view_bg"
        android:fontFamily="@font/nunito_regular_400"
        android:hint="@string/card_number"
        android:lines="1"
        android:maxLength="30"
        android:padding="10dp"
        android:textColor="@color/main_page_background_dark"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_view_bg"
        android:fontFamily="@font/nunito_regular_400"
        android:hint="@string/add_service_total_sum"
        android:lines="1"
        android:maxLength="30"
        android:padding="10dp"
        android:textColor="@color/main_page_background_dark"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginBottom="10dp"
        android:background="@color/button_light_blue"
        android:fontFamily="@font/nunito_semibold_600"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/outlined_btn_light"
        android:fontFamily="@font/nunito_semibold_600"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/button_light_blue"
        android:textSize="14sp" />

</LinearLayout>