<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_page_background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/set_card_info"
            android:textColor="@color/text_white"
            android:textSize="16sp"

            />

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/search_view_bg"
            android:digits="0123456789 "
            android:hint="@string/card_number"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="19"
            android:textSize="16sp"

            />

        <EditText
            android:id="@+id/et_card_owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:background="@drawable/search_view_bg"
            android:hint="@string/owner_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="50" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_card_expire_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:background="@drawable/search_view_bg"
                android:digits="0123456789/"
                android:hint="@string/expire_date_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="6" />

            <EditText
                android:id="@+id/et_card_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/search_view_bg"
                android:hint="@string/cvv"
                android:imeOptions="actionDone"
                android:inputType="numberPassword"
                android:maxLength="3" />
        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/include_nav"
        layout="@layout/start_activity_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</FrameLayout>