<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_page_background_dark"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_attention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold_700"
        android:text="@string/attention"
        android:textColor="@color/text_white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_withdraw_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_regular_400"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_attention"/>

    <CheckBox
        android:id="@+id/cb_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_white"
        app:buttonTint="@color/button_light_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_withdraw_amount" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_regular_400"
        android:text="@string/condition"
        android:textColor="@color/text_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/cb_condition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cb_condition"
        app:layout_constraintTop_toTopOf="@id/cb_condition" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/mButtonStyle"
        android:background="@color/button_light_blue"
        android:fontFamily="@font/nunito_semibold_600"
        android:text="@string/on_boarding_next"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_condition" />

</androidx.constraintlayout.widget.ConstraintLayout>