<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_on_boarding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            app:dotsCornerRadius="8dp"
            app:dotsSize="8dp"
            app:dotsSpacing="8dp"
            app:dotsWidthFactor="3"
            app:progressMode="false"
            app:selectedDotColor="@color/black" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lt_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="80dp"
            android:paddingBottom="100dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_skip"
                style="@style/Button.Text"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_gravity="start"
                android:layout_marginStart="28dp"
                android:text="@string/on_boarding_skip"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/Button.Text"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_marginEnd="28dp"
                android:text="@string/on_boarding_next"
                android:textSize="18sp"
                app:icon="@drawable/ic_on_boarding_next"
                app:iconGravity="end"
                app:iconTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:text="@string/on_boarding_start"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>